<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">colp-notes</string>
    <string name="action_settings">Settings</string>
    <string name="claims_label">Claims</string>
    <string name="name_hint">Name</string>
    <string name="status_hint">Status</string>
    <string name="destination_hint">Destination</string>
    <string name="reason_hint">Reason for travel</string>
    <string name="amount_hint">Amount</string>
    <string name="currency_hint">Currency</string>
    <string name="category_hint">Category</string>
    <string name="date_hint">Date</string>
    <string name="description_hint">Description</string>
    <string name="range_hint">Range</string>
    <string name="action_add_claim">Add claim</string>
    <string name="action_edit_claim">Edit claim</string>
    <string name="action_add_expense">Add expense</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_discard_changes">Discard changes</string>
    <string name="action_accept">Accept</string>
    <string name="action_delete_claim">Delete claim</string>
    <string name="action_delete_expense">Delete expense</string>
    <string name="action_submit_claim">Mark as submitted</string>
    <string name="action_return_claim">Mark as returned</string>
    <string name="action_approve_claim">Mark as approved</string>
    <string name="action_mail_claim">Email claim</string>
    <string name="action_set">Set</string>
    <string name="action_discard">Discard</string>
    <string name="edit_claim_label">Edit claim</string>
    <string name="expense_category_prompt">Set category</string>
    <string name="expense_currency_prompt">Set currency</string>
    
    <string name="from_label">FROM</string>
    <string name="to_label">TO</string>
    <string name="list_expenses_label">Expenses</string>
    <string name="edit_expense_label">Edit expense</string>
    <string name="total_label">Total</string>
    <string name="na_label">N/A</string>
    
    <string name="in_progress_label">in progress</string>
    <string name="submitted_label">submitted</string>
    <string name="returned_label">returned</string>
    <string name="approved_label">approved</string>
    
    <string name="discard_message">Are you sure you want to discard these changes?</string>
    <string name="delete_claim_message">Are you sure you want to delete this claim?</string>
    <string name="delete_expense_message">Are you sure you want to delete this expense?</string>
    <string name="approve_claim_message">Are you sure you want to approve this claim? It will no longer be editable.</string>
    <string name="amount_format_error">Incorrect format!</string>
    
    <string-array name="expense_categories">
		<item>Accommodation</item>
	    <item>Air fare</item>
		<item>Fuel</item>
		<item>Ground transport</item>
		<item>Meal</item>
		<item>Parking</item>
		<item>Registration</item>
		<item>Vehicle rental</item>
    </string-array>

</resources>
