<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="ca.ualberta.cs.colpnotes.activities.EditExpenseActivity" >


    <LinearLayout
        android:id="@+id/expense_date_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:id="@+id/expense_date_textview"
	        style="?android:attr/spinnerStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:hint="@string/date_hint"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Spinner
	        android:id="@+id/expense_category_spinner"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:layout_weight="0.5"
	        android:prompt="@string/expense_category_prompt"
	        tools:listitem="@android:layout/simple_spinner_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expense_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_date_category_layout" >

        <EditText
            android:id="@+id/expense_amount_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="0.6"
            android:ems="10"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal|numberSigned" />

        <Spinner
            android:id="@+id/expense_currency_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.4"
            android:ems="10"
            android:prompt="@string/expense_currency_prompt"
            tools:listitem="@android:layout/simple_spinner_item" />

    </LinearLayout>

    <EditText
        android:id="@+id/expense_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_amount_layout"
        android:ems="10"
        android:hint="@string/description_hint" />

</RelativeLayout>